feat: disable text selection
Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@ body {
   background: #1a1a1a;
   padding: 0;
   font-family: -apple-system, Roboto;
+
+  /* Disable text selection. */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #root {
