feat: disable image selection
Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ body {
   user-select: none;
 }
 
+img {
+  /* Disable image selection. */
+  pointer-events: none;
+}
+
 #root {
   display: flex;
   flex-direction: column;
