--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -22,6 +22,11 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
+}
+
+.post-author-avatar img {
+  border-radius: 50%;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -90,10 +95,14 @@
 }
 
 .post-image {
-  display: block;
   cursor: pointer;
   width: 100%;
   max-height: 500px;
+}
+
+.post-image img {
+  display: block;
+  width: 100%;
   object-fit: cover;
 }
 
