--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -72,16 +72,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 0.3s ease;
   cursor: pointer;
   border: none;
   border-radius: 50%;
   background: transparent;
   width: 42px;
   height: 42px;
-}
-
-.post-header-button:hover {
-  background: #f2f2f2;
 }
 
 .post-header-button:active {
@@ -120,6 +117,7 @@
   justify-content: center;
   align-items: center;
   gap: 6px;
+  transition: background-color 0.3s ease;
   cursor: pointer;
   border: none;
   border-radius: 7px;
@@ -128,10 +126,6 @@
   color: #676767;
   font-weight: 500;
   font-size: 12px;
-}
-
-.post-footer-button:hover {
-  background: #f2f2f2;
 }
 
 .post-footer-button:active {
