--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -90,6 +90,20 @@
   fill: #676767;
 }
 
+.post-content {
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  width: 100%;
+}
+
+.post-caption {
+  margin-right: 11px;
+  margin-left: 11px;
+  font-weight: 400;
+  font-size: 13px;
+}
+
 .post-image {
   cursor: pointer;
   width: 100%;
