feat: add support for displaying text in posts (#29)
* fix: adjust `post-author-details` class font size

Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

* feat: add support to display text in post

Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

---------

Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -41,8 +41,7 @@
   margin: 0;
   color: #101010;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 1.2;
+  font-size: 13px;
 }
 
 .post-meta {
@@ -89,6 +88,20 @@
   width: 20px;
   height: 20px;
   fill: #676767;
+}
+
+.post-content {
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  width: 100%;
+}
+
+.post-caption {
+  margin-right: 11px;
+  margin-left: 11px;
+  font-weight: 400;
+  font-size: 13px;
 }
 
 .post-image {
