fix: adjust post margins
Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 11px;
+  margin-left: 12px;
   height: 62px;
 }
 
@@ -90,16 +90,10 @@
   fill: #676767;
 }
 
-.post-content {
-  display: flex;
-  flex-direction: column;
-  gap: 11px;
-  width: 100%;
-}
-
 .post-caption {
-  margin-right: 11px;
-  margin-left: 11px;
+  margin-right: 12px;
+  margin-bottom: 12px;
+  margin-left: 12px;
   font-weight: 400;
   font-size: 13px;
 }
