--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -112,10 +112,39 @@
 
 .post-footer {
   display: flex;
+  flex-direction: column;
+  gap: 3px;
   box-sizing: border-box;
   padding: 3px;
   width: 100%;
-  height: 40px;
+}
+
+.post-interactions {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding-right: 8px;
+  padding-left: 8px;
+  width: 100%;
+  height: 30px;
+  color: #676767;
+  font-weight: 400;
+  font-size: 12px;
+}
+
+.post-reaction {
+  display: flex;
+  gap: 4px;
+}
+
+.post-reaction-icon {
+  width: 16px;
+  height: 16px;
+}
+
+.post-footer-buttons {
+  display: flex;
+  height: 34px;
 }
 
 .post-footer-button {
