feat: add support for handling likes in posts (#31)
* fix: adjust post margins

Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

* feat: add support to display post reactions

Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

* feat: dynamically adjust post caption bottom margin

Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

* feat: make like button interactive

Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

---------

Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 11px;
+  margin-left: 12px;
   height: 62px;
 }
 
@@ -90,16 +90,9 @@
   fill: #676767;
 }
 
-.post-content {
-  display: flex;
-  flex-direction: column;
-  gap: 11px;
-  width: 100%;
-}
-
 .post-caption {
-  margin-right: 11px;
-  margin-left: 11px;
+  margin-right: 12px;
+  margin-left: 12px;
   font-weight: 400;
   font-size: 13px;
 }
@@ -118,10 +111,39 @@
 
 .post-footer {
   display: flex;
+  flex-direction: column;
+  gap: 3px;
   box-sizing: border-box;
   padding: 3px;
   width: 100%;
-  height: 40px;
+}
+
+.post-interactions {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding-right: 8px;
+  padding-left: 8px;
+  width: 100%;
+  height: 30px;
+  color: #676767;
+  font-weight: 400;
+  font-size: 12px;
+}
+
+.post-reaction {
+  display: flex;
+  gap: 4px;
+}
+
+.post-reaction-icon {
+  width: 16px;
+  height: 16px;
+}
+
+.post-footer-buttons {
+  display: flex;
+  height: 34px;
 }
 
 .post-footer-button {
@@ -141,6 +163,10 @@
   font-size: 12px;
 }
 
+.post-footer-button.liked {
+  color: #1d6fda;
+}
+
 .post-footer-button:active {
   background: #e5e5e5;
 }
@@ -149,4 +175,9 @@
   filter: saturate(100%) invert(40%) saturate(0%);
   width: 20px;
   height: 20px;
+}
+
+.post-footer-button-icon.liked {
+  filter: saturate(100%) invert(28%) sepia(79%) saturate(3739%)
+    hue-rotate(207deg) brightness(96%) contrast(78%);
 }
