--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@ body {
   margin: 0;
   background: #1a1a1a;
   padding: 0;
-  font-family: -apple-system, Roboto;
+  font-family:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial,
+    sans-serif;
 
   /* Disable text selection. */
   -webkit-user-select: none;
